fixed vertical alignment of grid item content

--- a/src/styles/grid.sass
+++ b/src/styles/grid.sass
@@ -12,6 +12,7 @@
     &__item
         display: flex
         flex-direction: column
+        justify-content: flex-start
 
     &--big .grid__item, .grid__item--big
         align-items: flex-start !important
